# llm-foundations

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
foundation/structured-extraction/: extraction.py  normalize.py  test_normalize.py
foundation/structured-extraction/data/: invoices.jsonl
foundation/token-budgeter/: test_budget.py
foundation/universal_client/: __init__.py
retrieval/eval-harness/: data.jsonl  run_eval.py
retrieval/eval-harness/evals/: golden.jsonl  golden.sample.jsonl
structured-extraction/: extraction.py
token-budgeter/: budget.py
universal-client/: client.py
universal_client/: client.py
