[project]
name = "llm-foundations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.109.2",
    "google-genai>=2.8.0",
    "instructor>=1.15.4",
    "openai>=2.42.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
